# client_gb

./: .clang-format  .gitmodules  CMakeLists.txt  app.rc  migration.qrc  res_file.qrc
migrations/: 00001__create_tables.sql  00002__create_views.sql  00003__change_month.sql  00004__drop_year_from_bases.sql  00005__change_plan_to_month.sql  00006__create_bases_scope.sql  00007__distinct_bases.sql  00008__distinct_bases_right.sql  00009__change_remn_inc.sql  00010__add_empty_doc.sql  00011__add_exp_part_in_remn_year.sql  00012__add_in_kosgu_ref_notes_req.sql  00013__change_generate_funded_at.sql  00014__add_fund_date_in_factdoc.sql
reports/: spravka_on_plan_kcs_kosgu.lrxml  spravka_on_plan_kkrb_svod.lrxml  zayavka_on_fact.lrxml  zayavka_on_fact_alter.lrxml
schemas/: fact_doc.xsd  plan_doc.xsd
src/: about.cpp  about.h  about.ui  analitic_finance.cpp  analitic_finance.h  analitic_finance.ui  analitic_plan.cpp  analitic_plan.h  analitic_plan.ui  auth_dialog.cpp  auth_dialog.h  auth_dialog.ui  delegate_center_aligment.cpp  delegate_center_aligment.h  delegate_expenses_part.cpp  delegate_expenses_part.h  delegate_limited_trimmed_text.cpp  delegate_limited_trimmed_text.h  delegate_number_money.cpp  delegate_number_money.h  delegate_payment_type.cpp  delegate_payment_type.h  delegate_readonly.cpp  delegate_readonly.h  delegate_status.cpp  delegate_status.h  editor_fact.cpp  editor_fact.h  editor_fact.ui  editor_plan.cpp  editor_plan.h  editor_plan.ui  editor_signature.cpp  editor_signature.h  editor_signature.ui  error_dialog.cpp  error_dialog.h  error_dialog.ui  expenses_part.cpp  expenses_part.h  (+41 more)
template/: solution_plan.xlsx
